// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pf Modal Form should not have modal html when isOpen$ is false 1`] = `
<pf-modal-form
  allowDismiss={[Function Boolean]}
  attemptedSubmit="false"
  backdrop={[Function String]}
  centered="false"
  formGroup={[Function FormGroup]}
  isOpen$={[Function Observable]}
  modalId={[Function String]}
  modalOpenSubscription={[Function Subscriber]}
  modalService={[Function NgbModal]}
  onDismiss={[Function EventEmitter]}
  onSubmit={[Function EventEmitter]}
  onSubmitAttempt={[Function EventEmitter]}
  primaryButtonClass={[Function String]}
  primaryButtonText={[Function String]}
  primaryButtonTextSubmitting={[Function String]}
  resetFormOnClose={[Function Boolean]}
  secondaryButtonText={[Function String]}
  showFooter={[Function Boolean]}
  showSpinner={[Function Boolean]}
  size={[Function String]}
  submitEnabled={[Function Boolean]}
  submitting="false"
  templateRef={[Function TemplateRef_]}
  title={[Function String]}
  windowClass="null"
>
  <div
    class="modal-container"
    id="test-modal"
  />
</pf-modal-form>
`;

exports[`Pf Modal Form should show subTitle in modal header if a subTitle is provided 1`] = `
<pf-modal-form
  allowDismiss={[Function Boolean]}
  attemptedSubmit="false"
  backdrop={[Function String]}
  centered="false"
  formGroup={[Function FormGroup]}
  isOpen$={[Function Observable]}
  modalId={[Function String]}
  modalOpenSubscription={[Function Subscriber]}
  modalService={[Function NgbModal]}
  onDismiss={[Function EventEmitter]}
  onSubmit={[Function EventEmitter]}
  onSubmitAttempt={[Function EventEmitter]}
  primaryButtonClass={[Function String]}
  primaryButtonText={[Function String]}
  primaryButtonTextSubmitting={[Function String]}
  resetFormOnClose={[Function Boolean]}
  secondaryButtonText={[Function String]}
  showFooter={[Function Boolean]}
  showSpinner={[Function Boolean]}
  size={[Function String]}
  subTitle={[Function String]}
  submitEnabled={[Function Boolean]}
  submitting="false"
  templateRef={[Function TemplateRef_]}
  title={[Function String]}
  windowClass="null"
>
  <div
    class="modal-container"
    id="test-modal"
  />
</pf-modal-form>
`;
